# flint-vm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
extensions/input-output/: CMakeLists.txt
extensions/input-output/include/: flint_vm_output.h
extensions/input-output/src/: flint_vm_output.c
include/: byte_code_loader.h  byte_code_printer.h  load_library.h  logger.h  machine.h  opcode.h  type.h  value.h
libs/: utarray.h
scripts/: bytecode_generation.py  op.py  opcode.csv  opcode_generation.py
src/: CMakeLists.txt  byte_code_loader.c  byte_code_printer.c  load_library.c  logger.c  machine.c  main.c  type.c  value.c
test/: CMakeLists.txt  test.c  test.h  test_arithmetic.c  test_arithmetic.h  test_array.c  test_array.h  test_closure.c  test_closure.h  test_function.c  test_function.h  test_global_variable.c  test_global_variable.h  test_jump.c  test_jump.h  test_structure.c  test_structure.h
